production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web-wdpress
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: httpd
