production/patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prod-myapp-v1-2-0
spec:
  template:
    spec:
      containers:
      - name: myapp
        image: lordofthejars/pacman-kikd:1.1.0
