production/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route
spec:
  host: www.prd-web.lab.net
  to:
    kind: Service
    name: prd-svc-web-wdpress-v0-9
